--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">GPA_jariwalas1_Calculator</string>
+    <string name="gtitle">GPA_Calculator</string>
+    <string name="gcourse1">Course 1</string>
+    <string name="gcourse2">Course 2</string>
+    <string name="gcourse3">Course 3</string>
+    <string name="gcourse4">Course 4</string>
+    <string name="gcourse5">Course 5</string>
+    <string name="gpacount">GPA</string>
+    <string name="submit">Compute GPA</string>
 </resources>
